--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -804,6 +804,8 @@
                     <div>[[${cartFailureMessage}]]</div>
                 </div>
             </div>
+            <!-- checkout Success alert -->
+            <div id="checkoutSuccessMessage"></div>
 
             <div class="px-3 pt-2">
 
