--- a/src/main/resources/templates/admin/sales.html
+++ b/src/main/resources/templates/admin/sales.html
@@ -532,8 +532,8 @@
             </div>
             <div class="d-flex">
               <div class="text-sm-end me-5">
-                <div class="text-light fs-base">Total Sales Quantity</div>
-                <h3 class="text-light"><i class="ci-target opacity-60 me-2"></i>[[${totalSalesQuantity}]]</h3>
+                <div class="text-light fs-base">Total Sales Sold</div>
+                <h3 class="text-light"><i class="ci-target opacity-60 me-2"></i>[[${totalSalesQuantity}]] products</h3>
               </div>
             </div>
           </div>
@@ -604,11 +604,11 @@
                 <div class="row mx-n2">
                   <ul class="list-group">
                     <li class="list-group-item text-center bg-secondary">Top 5 Products in Sales</li>
-                    <li class="list-group-item list-group-item-primary">1 . [[${rankedSalesInfoList[0].productName}]]   |   ₩[[${rankedSalesInfoList[0].productSalesAmount}]]</li>
-                    <li class="list-group-item list-group-item-accent">2 . [[${rankedSalesInfoList[1].productName}]]   |   ₩[[${rankedSalesInfoList[1].productSalesAmount}]]</li>
-                    <li class="list-group-item list-group-item-secondary">3 . [[${rankedSalesInfoList[2].productName}]]   |   ₩[[${rankedSalesInfoList[2].productSalesAmount}]]</li>
-                    <li class="list-group-item list-group-item-success">4 . [[${rankedSalesInfoList[3].productName}]]   |   ₩[[${rankedSalesInfoList[3].productSalesAmount}]]</li>
-                    <li class="list-group-item list-group-item-danger">5 . [[${rankedSalesInfoList[4].productName}]]   |   ₩[[${rankedSalesInfoList[4].productSalesAmount}]]</li>
+                    <li class="list-group-item list-group-item-info">1 . [[${rankedSalesInfoList[0].productName}]]   |   ₩[[${rankedSalesInfoList[0].productSalesAmount}]]</li>
+                    <li class="list-group-item list-group-item-secondary">2 . [[${rankedSalesInfoList[1].productName}]]   |   ₩[[${rankedSalesInfoList[1].productSalesAmount}]]</li>
+                    <li class="list-group-item list-group-item-success">3 . [[${rankedSalesInfoList[2].productName}]]   |   ₩[[${rankedSalesInfoList[2].productSalesAmount}]]</li>
+                    <li class="list-group-item list-group-item-warning">4 . [[${rankedSalesInfoList[3].productName}]]   |   ₩[[${rankedSalesInfoList[3].productSalesAmount}]]</li>
+                    <li class="list-group-item list-group-item-accent">5 . [[${rankedSalesInfoList[4].productName}]]   |   ₩[[${rankedSalesInfoList[4].productSalesAmount}]]</li>
                   </ul>
                 </div>
 
@@ -741,7 +741,14 @@
     var rankedSalesInfoList = /*[[${rankedSalesInfoList}]]*/;
     /*]]>*/
 
-    console.log(rankedSalesInfoList);
+    /* format the java model data for highcharts js*/
+    var formattedRankedInfoList = [];
+    for(var i=0; i<rankedSalesInfoList.length; i++) {
+      let firstValue =`${rankedSalesInfoList[i].productName}<br>₩${rankedSalesInfoList[i].productSalesAmount}`;
+      let secondValue = rankedSalesInfoList[i].productSalesAmount;
+
+      formattedRankedInfoList.push([firstValue, secondValue])
+    }
   </script>
 
   <!-- HighChart Script -->
@@ -758,25 +765,10 @@
       subtitle: { text: '판매상품 점유율'},
       plotOptions: { pie: {innerSize: 100, depth: 45} },
       series: [{
-        name: '주간 판매',
-        /*
-          here, ajax call to fetch the sales data of all products
-          -> the backend will send data in the form of List<ProductSalesData>,
-              where ProductSalesData is a class with fields : String productName & int totalSales
-         */
-        data: [
-          // [productName, totalSales]
-          // for each .. [`${rankedSalesInfoList[i].productName}<br>₩${rankedSalesInfoList[i].productSalesAmount}`, rankedSalesInfoList[i].productSalesAmount]
-          ['{productName}<br>₩{totalSales}', 1],
-          ['{productName}<br>₩{totalSales}', 3],
-          ['{productName}<br>₩{totalSales}', 1],
-          ['{productName}<br>₩{totalSales}', 2],
-          ['{productName}<br>₩{totalSales}', 3],
-          ['{productName}<br>₩{totalSales}', 6],
-          ['{productName}<br>₩{totalSales}', 4],
-          ['{productName}<br>₩{totalSales}', 1],
-          ['{productName}<br>₩{totalSales}', 1]
-        ]
+        name: '총 판매량',
+        /* [[productName, totalSales], [productName, totalSales], ...]
+           for each .. [`${rankedSalesInfoList[i].productName}<br>₩${rankedSalesInfoList[i].productSalesAmount}`, rankedSalesInfoList[i].productSalesAmount] */
+        data: formattedRankedInfoList
       }]
     });
   </script>
