--- a/src/main/resources/templates/admin/sales.html
+++ b/src/main/resources/templates/admin/sales.html
@@ -560,10 +560,10 @@
                   </div>
                   <ul class="list-unstyled mb-0">
                     <li class="border-bottom mb-0"><a class="nav-link-style d-flex align-items-center px-4 py-3 active" th:href="@{/admin-signin}"><i class="ci-dollar opacity-60 me-2"></i>Sales Management</a></li>
-                    <li class="border-bottom mb-0"><a class="nav-link-style d-flex align-items-center px-4 py-3" th:href="@{/edit-product}"><i class="ci-package opacity-60 me-2"></i>Product Management</a></li>
+                    <li class="border-bottom mb-0"><a class="nav-link-style d-flex align-items-center px-4 py-3" th:href="@{/edit-product}"><i class="ci-package opacity-60 me-2"></i>Product Management<br>(in progress)</a></li>
                     <li class="border-bottom mb-0"><a class="nav-link-style d-flex align-items-center px-4 py-3" th:href="@{/add-product}"><i class="ci-cloud-upload opacity-60 me-2"></i>Add New Product</a></li>
-                    <li class="border-bottom mb-0"><a class="nav-link-style d-flex align-items-center px-4 py-3" th:href="@{/add-recipe}"><i class="ci-broccoli opacity-60 me-2"></i>Add New Recipe</a></li>
-                    <li class="mb-0"><a class="nav-link-style d-flex align-items-center px-4 py-3" href="account-signin.html"><i class="ci-sign-out opacity-60 me-2"></i>Sign out</a></li>
+                    <li class="border-bottom mb-0"><a class="nav-link-style d-flex align-items-center px-4 py-3" th:href="@{/add-recipe}"><i class="ci-broccoli opacity-60 me-2"></i>Add New Recipe<br>(in progress)</a></li>
+                    <li class="mb-0"><a class="nav-link-style d-flex align-items-center px-4 py-3" th:href="@{/home}"><i class="ci-sign-out opacity-60 me-2"></i>Sign out</a></li>
                   </ul>
                   <hr>
                 </div>
@@ -712,10 +712,6 @@
   </footer>
   <!-- Footer ends -->
 
-  <!-- Toolbar for handheld devices (Marketplace)-->
-  <div class="handheld-toolbar">
-    <div class="d-table table-layout-fixed w-100"><a class="d-table-cell handheld-toolbar-item" href="dashboard-favorites.html"><span class="handheld-toolbar-icon"><i class="ci-heart"></i></span><span class="handheld-toolbar-label">Favorites</span></a><a class="d-table-cell handheld-toolbar-item" href="javascript:void(0)" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" onclick="window.scrollTo(0, 0)"><span class="handheld-toolbar-icon"><i class="ci-menu"></i></span><span class="handheld-toolbar-label">Menu</span></a><a class="d-table-cell handheld-toolbar-item" href="marketplace-cart.html"><span class="handheld-toolbar-icon"><i class="ci-cart"></i><span class="badge bg-primary rounded-pill ms-1">3</span></span><span class="handheld-toolbar-label">$56.00</span></a></div>
-  </div>
   <!-- Back To Top Button--><a class="btn-scroll-top" href="#top" data-scroll><span class="btn-scroll-top-tooltip text-muted fs-sm me-2">Top</span><i class="btn-scroll-top-icon ci-arrow-up">   </i></a>
   <!-- jQuery -->
   <script src="/js/jquery.min.js"></script>
